<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.DangKyActivity">
    <TextView
        android:id="@+id/tvTieuDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DangKi"
        android:textSize="@dimen/size30sp"
        android:textColor="@color/colorWhite"
        android:layout_margin="@dimen/size10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="@dimen/size10dp"
        />
    <LinearLayout
        android:id="@+id/KhungDangKi"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTenDangNhap"
            android:hint="@string/ten_DN"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/user"
            android:padding="@dimen/size10dp"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"/>
        <EditText
            android:id="@+id/etMatKhau"
            android:hint="@string/mat_khau"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/password"
            android:padding="@dimen/size10dp"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:password="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:orientation="horizontal">
            <RadioGroup
                android:layout_weight="1"
                android:id="@+id/rgGioiTinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbNam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nam"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rbNu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nữ"/>
            </RadioGroup>
            <Spinner
                android:layout_toLeftOf="@+id/rgGioiTinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spnQuyenTruyCap"></Spinner>
        </LinearLayout>
        <EditText
            android:id="@+id/etNgaySinh"
            android:hint="@string/ngay_sinh"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/calender"
            android:padding="@dimen/size10dp"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"/>
        <EditText
            android:id="@+id/etCMT"
            android:hint="@string/CMT"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/idcard"
            android:padding="@dimen/size10dp"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:phoneNumber="true"
            android:maxLength="9"
            android:background="@color/colorWhite"/>
        <LinearLayout
            android:layout_marginTop="@dimen/size10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/size10dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnDangKy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DangKi"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="@dimen/size10dp"/>

            <Button
                android:id="@+id/btnThoat"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:background="@color/colororange"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
