<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorGreen"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="@dimen/size100dp"
            android:layout_marginLeft="@dimen/size50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Đăng nhập"
            android:id="@+id/tvDangNhap"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/size30dp"/>
        <ImageView
            android:paddingTop="@dimen/size30dp"
            android:layout_width="@dimen/size150dp"
            android:layout_height="@dimen/size150dp"
            android:layout_weight="1"
            android:src="@drawable/logodangnhap"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtTenDangNhap_DN"
        android:hint="@string/ten_DN"
        android:padding="@dimen/size10dp"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="@dimen/size10dp"
        android:background="@color/colorWhite"
        android:textColorHint="@color/colorGray"
        android:layout_margin="@dimen/size10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtMatKhauDangNhap"
        android:hint="@string/mat_khau"
        android:padding="@dimen/size10dp"
        android:drawableLeft="@drawable/password"
        android:textColorHint="@color/colorGray"
        android:drawablePadding="@dimen/size10dp"
        android:background="@color/colorWhite"
        android:layout_margin="@dimen/size10dp"
        android:password="true"/>

    <Button
        android:layout_marginTop="@dimen/size10dp"
        android:layout_gravity="center"
        android:id="@+id/btnDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:text="Đăng nhập"
        android:background="@color/colorread"
        android:layout_marginBottom="@dimen/size10dp"/>

    <Button
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:id="@+id/btnDangKiTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DangKi"
        android:background="@color/colorPrimary"/>

</LinearLayout>